[gd_scene load_steps=32 format=3 uid="uid://doku0loaauhmm"]

[ext_resource type="Script" path="res://Main Game/game.gd" id="1_hadr0"]
[ext_resource type="PackedScene" uid="uid://bxibk75h3g5x3" path="res://Ball/ball.tscn" id="2_5m8lq"]
[ext_resource type="PackedScene" uid="uid://bsiemt4atgc2s" path="res://Walls/wall_down.tscn" id="3_jsd5f"]
[ext_resource type="PackedScene" uid="uid://cpcwgrcxxsrvv" path="res://Walls/wall_up.tscn" id="4_gblor"]
[ext_resource type="Shader" path="res://Main Game/game_color_rect.gdshader" id="4_sowci"]
[ext_resource type="PackedScene" uid="uid://dq5lgx3emoax0" path="res://bounds_left.tscn" id="5_rxelv"]
[ext_resource type="PackedScene" uid="uid://cbmmce8uawk1n" path="res://bounds_right.tscn" id="6_6v20j"]
[ext_resource type="PackedScene" uid="uid://cq83tyx3fi3gd" path="res://Players/player_1.tscn" id="7_cu7us"]
[ext_resource type="PackedScene" uid="uid://b43rkdvatrfty" path="res://Players/player_2.tscn" id="8_ja70f"]
[ext_resource type="Texture2D" uid="uid://diik11teyvc8b" path="res://Sprites/Background.png" id="9_p0phb"]
[ext_resource type="PackedScene" uid="uid://lifj1p1t035t" path="res://UI/countdown_timer.tscn" id="10_qgxbi"]
[ext_resource type="Script" path="res://Main Game/game_camera.gd" id="11_gshf3"]
[ext_resource type="PackedScene" uid="uid://bwk4b1tk1bgle" path="res://UI/score.tscn" id="12_mr2rh"]
[ext_resource type="Script" path="res://UI/UI Manager.gd" id="14_b7sos"]
[ext_resource type="PackedScene" uid="uid://dua4icc2b3ldh" path="res://UI/Menus/pause_menu.tscn" id="14_vjw0k"]
[ext_resource type="PackedScene" uid="uid://ds3g65fim75uk" path="res://UI/Menus/settings_menu.tscn" id="16_2oj3s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p0jrl"]
atlas = ExtResource("9_p0phb")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6dhp"]
atlas = ExtResource("9_p0phb")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvbkq"]
atlas = ExtResource("9_p0phb")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mamb"]
atlas = ExtResource("9_p0phb")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj35n"]
atlas = ExtResource("9_p0phb")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6jy4"]
atlas = ExtResource("9_p0phb")
region = Rect2(9600, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4swh"]
atlas = ExtResource("9_p0phb")
region = Rect2(11520, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_shfs2"]
atlas = ExtResource("9_p0phb")
region = Rect2(13440, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_14p4a"]
atlas = ExtResource("9_p0phb")
region = Rect2(15360, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_nte5i"]
atlas = ExtResource("9_p0phb")
region = Rect2(17280, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoh3m"]
atlas = ExtResource("9_p0phb")
region = Rect2(19200, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cfau"]
atlas = ExtResource("9_p0phb")
region = Rect2(21120, 0, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_cd5oh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0jrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6dhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvbkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mamb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj35n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6jy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4swh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shfs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14p4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nte5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoh3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cfau")
}],
"loop": true,
"name": &"Default Background",
"speed": 12.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_foto7"]
line_spacing = 6.0
font_size = 100
font_color = Color(0.768627, 0.803922, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tbn5j"]
shader = ExtResource("4_sowci")
shader_parameter/fisheye_strength = 1.0

[node name="Game" type="Node2D" node_paths=PackedStringArray("player_1", "player_2", "ball", "countdown_timer_label", "game_camera", "animated_game_background", "random_specials_timer", "ball_spawner_timer")]
texture_filter = 1
position = Vector2(960, 620)
script = ExtResource("1_hadr0")
player_1 = NodePath("Player 1")
player_2 = NodePath("Player 2")
ball = NodePath("Ball")
countdown_timer_label = NodePath("Countdown Timer/Label")
game_camera = NodePath("Game Camera")
animated_game_background = NodePath("Animated Game Background")
random_specials_timer = NodePath("Random Specials Timer")
ball_spawner_timer = NodePath("Ball Spawner Timer")
metadata/_edit_lock_ = true

[node name="Player 1" parent="." instance=ExtResource("7_cu7us")]
position = Vector2(-868, 3)

[node name="Knock Back Timer" parent="Player 1" index="2"]
wait_time = 0.25

[node name="Player 2" parent="." instance=ExtResource("8_ja70f")]
position = Vector2(863, -9)

[node name="Ball" parent="." groups=["Ball"] instance=ExtResource("2_5m8lq")]

[node name="Wall Up" parent="." groups=["Walls"] instance=ExtResource("4_gblor")]
position = Vector2(0, -554)

[node name="Wall Down" parent="." groups=["Walls"] instance=ExtResource("3_jsd5f")]
position = Vector2(0, 554)

[node name="Bounds Left" parent="." node_paths=PackedStringArray("player_2_score_label") instance=ExtResource("5_rxelv")]
position = Vector2(-968, 0)
player_2_score_label = NodePath("../Score/HBoxContainer/CenterContainer2/Player 2 Score")

[node name="Bounds Right" parent="." node_paths=PackedStringArray("player_1_score_label") instance=ExtResource("6_6v20j")]
position = Vector2(968, 0)
player_1_score_label = NodePath("../Score/HBoxContainer/CenterContainer/Player 1 Score")

[node name="Animated Game Background" type="AnimatedSprite2D" parent="."]
z_index = -3
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cd5oh")
animation = &"Default Background"

[node name="Countdown Timer" parent="." instance=ExtResource("10_qgxbi")]
offset_top = -505.0
offset_bottom = -505.0

[node name="Label" parent="Countdown Timer" index="1"]
label_settings = SubResource("LabelSettings_foto7")

[node name="Score" parent="." instance=ExtResource("12_mr2rh")]
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="Game Camera" type="Camera2D" parent="."]
script = ExtResource("11_gshf3")

[node name="CRT Fish Eye Lens" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tbn5j")
anchors_preset = 10
anchor_right = 1.0
offset_left = -1218.0
offset_top = -711.0
offset_right = 1225.0
offset_bottom = 713.0
grow_horizontal = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="Random Specials Timer" type="Timer" parent="."]
process_callback = 0

[node name="Ball Spawner Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.45
one_shot = true

[node name="UI Manager" type="CanvasLayer" parent="." node_paths=PackedStringArray("pause_menu", "pause_menu_background", "settings_menu")]
process_mode = 3
layer = 3
follow_viewport_enabled = true
script = ExtResource("14_b7sos")
pause_menu = NodePath("Pause Menu")
pause_menu_background = NodePath("Pause Menu/BackgroundAnimationPlayer")
settings_menu = NodePath("SettingsMenu")

[node name="Pause Menu" parent="UI Manager" instance=ExtResource("14_vjw0k")]
process_mode = 2

[node name="SettingsMenu" parent="UI Manager" instance=ExtResource("16_2oj3s")]

[connection signal="body_entered" from="Bounds Left" to="." method="_on_bounds_left_body_entered"]
[connection signal="body_entered" from="Bounds Right" to="." method="_on_bounds_right_body_entered"]
[connection signal="timeout" from="Random Specials Timer" to="." method="_on_random_specials_timer_timeout"]
[connection signal="timeout" from="Ball Spawner Timer" to="." method="_on_ball_spawner_timer_timeout"]
[connection signal="pressed" from="UI Manager/Pause Menu/PanelContainer/CenterContainer/VBoxContainer/Resume Button" to="UI Manager" method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI Manager/Pause Menu/PanelContainer/CenterContainer/VBoxContainer/Restart Button" to="UI Manager" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI Manager/Pause Menu/PanelContainer/CenterContainer/VBoxContainer/Settings Button" to="UI Manager" method="_on_settings_button_pressed"]
[connection signal="pressed" from="UI Manager/Pause Menu/PanelContainer/CenterContainer/VBoxContainer/Main Menu Button" to="UI Manager" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="UI Manager/SettingsMenu/Panel/BackgroundPanel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="UI Manager" method="_on_close_button_pressed"]

[editable path="Player 1"]
[editable path="Player 2"]
[editable path="Countdown Timer"]
[editable path="Score"]
[editable path="UI Manager/Pause Menu"]
[editable path="UI Manager/SettingsMenu"]
